objects/Book_Project__c.object
<CustomObject>
    <description>This object is used to capture book projects and manage the book program process.</description>
    <fields>
        <fullName>Book_Language__c</fullName>
        <description>Language the book is written in</description>
        <inlineHelpText>Language the book is written in</inlineHelpText>
        <label>Book Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Serbian</fullName>
                </value>
                <value>
                    <fullName>Slovak</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Book_Promotion_Response_Date_Time__c</fullName>
        <description>Used to capture when a survey was received back</description>
        <label>Book Promotion Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Book_Promotional_Survey_Last_Sent__c</fullName>
        <description>indicates when the last Book Promotional Survey was sent</description>
        <label>Book Promotional Survey Last Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Title__c</fullName>
        <description>to maintain the title of the book, used by the email handler where the subject of the email is entered into this field</description>
        <label>Book Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Companion_Software_URL__c</fullName>
        <description>Capture the Companion SW URL</description>
        <inlineHelpText>Capture the Companion software URL</inlineHelpText>
        <label>Companion Software URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <description>Copyright year of the published book</description>
        <inlineHelpText>Copyright year of the published book</inlineHelpText>
        <label>Copyright Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Book Program</description>
        <inlineHelpText>Description of the Book Program</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2AEmailCount__c</fullName>
        <description>This field show the count of e2a email which has status as new</description>
        <label>E2AEmailCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Publication_Date__c</fullName>
        <description>the date of expected publication of the book</description>
        <inlineHelpText>The date of the books expected publication</inlineHelpText>
        <label>Expected Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Book_Webpage__c</fullName>
        <description>used to capture a non-mathworks hosted website dedicated to this book</description>
        <inlineHelpText>used to capture a non-mathworks hosted webpage dedicated to this book</inlineHelpText>
        <label>External Book Webpage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to indicate if the Book Project needs follow up action</description>
        <inlineHelpText>sed to indicate if the Book Project needs follow up action</inlineHelpText>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MathWorks_Web_Page_Live_Date__c</fullName>
        <description>Date to capture the date the webpage for this book is live</description>
        <inlineHelpText>Date to capture the date the webpage for this book is live for the MathWorks</inlineHelpText>
        <label>MathWorks Web Page Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MathWorks_Web_Page_Removed__c</fullName>
        <description>Date web page removed</description>
        <inlineHelpText>Date web page removed for MathWorks</inlineHelpText>
        <label>MathWorks Web Page Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MathWorks_Webpage__c</fullName>
        <description>used to capture the MathWorks webpage</description>
        <inlineHelpText>Manually enter the MathWorks Webpage</inlineHelpText>
        <label>MathWorks Webpage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>New_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>used to relate books together (EG 1st edition and subsequent editions)</inlineHelpText>
        <label>Parent Book</label>
        <referenceTo>Book_Project__c</referenceTo>
        <relationshipLabel>Related Editions</relationshipLabel>
        <relationshipName>Book_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact on the Book Project</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Book Projects</relationshipLabel>
        <relationshipName>Book_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_s_Account__c</fullName>
        <formula>Primary_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact&apos;s Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Office__c</fullName>
        <description>Used to capture the MathWorks Primary Office</description>
        <inlineHelpText>Used to capture the MathWorks Primary Office</inlineHelpText>
        <label>Primary Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotional_Survey_Status__c</fullName>
        <description>to indicate if the received survey has been worked on</description>
        <label>Promotional Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Time_of_Last_Email__c</fullName>
        <description>The day / time when the last email was received.</description>
        <label>Receive Time of Last Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Book_Promotion_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger renewal email workflows. Should not be exposed in the UI except for testing OR to defined book program users.. checked by manual or data loader operation and unchecked by workflow as a result of an update from GetFeedback.</description>
        <inlineHelpText>Used to trigger renewal email workflows. Should not be exposed in the UI except for testing OR to defined book program users.. checked by manual or data loader operation and unchecked by workflow as a result of an update from GetFeedback.</inlineHelpText>
        <label>Send Book Promotion Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Siebel_Publisher__c</fullName>
        <inlineHelpText>This field has the Publisher data migrated from Siebel Line items</inlineHelpText>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Age__c</fullName>
        <formula>ROUND((Now() -  Status_Updated_Date__c  ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Update_Survey_Last_sent_date__c</fullName>
        <description>records when the last email was sent to the contact that included the Status Update Survey</description>
        <label>Status Update Survey - Last sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Update_Survey_Response_Date_Tim__c</fullName>
        <description>record the date / time the last Status Update Survey was received</description>
        <label>Status Update Survey - Response Date/Tim</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Update_Survey_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked it will trigger an email that includes the Status Update Survey link</description>
        <label>Status Update Survey - Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Update_Survey_Status__c</fullName>
        <description>Monitor the Status of a received Survey</description>
        <label>Status Update Survey - Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Update_Survey_Unresponsive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this will be checked if the Contact does not complete a sent Status Update Survey</description>
        <label>Status Update Survey - Unresponsive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Updated_Date__c</fullName>
        <description>Indicate when the status was last updated</description>
        <label>Status Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to manage the book project from initial application through completion</description>
        <inlineHelpText>Used to manage the book project from initial application through completion</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Developing</fullName>
                </value>
                <value>
                    <fullName>Copies on order - 1</fullName>
                </value>
                <value>
                    <fullName>Copies on order - 2</fullName>
                </value>
                <value>
                    <fullName>Copies on order - 3</fullName>
                </value>
                <value>
                    <fullName>In Web page process</fullName>
                </value>
                <value>
                    <fullName>Waiting for materials</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Denied – coverage</fullName>
                </value>
                <value>
                    <fullName>Out of Print</fullName>
                </value>
                <value>
                    <fullName>Inactive – has new edition</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Published – has other sw</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>General Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:&quot;&amp;LEFT( $Organization.Id , 4 )&amp; 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0000000&apos;), 
RIGHT($Organization.Id,4), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;000000&apos;), 
RIGHT($Organization.Id,5), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;00000&apos;), 
RIGHT($Organization.Id,6), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0000&apos;), 
RIGHT($Organization.Id,7), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;000&apos;), 
RIGHT($Organization.Id,8), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;00&apos;), 
RIGHT($Organization.Id,9), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0&apos;), 
RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11) 
) 
) 
) 
) 
) 
) 
) 
&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp; 
IF(BEGINS(RIGHT(Id,11), &apos;0000000&apos;), RIGHT(Id,4), 
IF(BEGINS(RIGHT(Id,11), &apos;000000&apos;), RIGHT(Id,5), 
IF(BEGINS(RIGHT(Id,11), &apos;00000&apos;), RIGHT(Id,6), 
IF(BEGINS(RIGHT(Id,11), &apos;0000&apos;), RIGHT(Id,7), 
IF(BEGINS(RIGHT(Id,11), &apos;000&apos;), RIGHT(Id,8), 
IF(BEGINS(RIGHT(Id,11), &apos;00&apos;), RIGHT(Id,9), 
IF(BEGINS(RIGHT(Id,11), &apos;0&apos;), RIGHT(Id,10), 
RIGHT(Id,11) 
) 
) 
) 
) 
) 
) 
) 
&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unresponsive_to_Book_Promotion_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Managed by workflow field update, indicates that the contact has not responded to the book promotion survey emails (3 separate attempts)  Used as formula criteria to determine if future emails should be sent.</description>
        <inlineHelpText>Managed by workflow field update, indicates that the contact has not responded to the book promotion survey emails (3 separate attempts)  Used as formula criteria to determine if future emails should be sent.</inlineHelpText>
        <label>Unresponsive to Book Promotion Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Category__c</fullName>
        <description>used to capture subject areas that the book falls into</description>
        <inlineHelpText>used to capture subject areas that the book falls into</inlineHelpText>
        <label>Web Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biosciences &amp; Biomedical</fullName>
                </value>
                <value>
                    <fullName>Chemistry &amp; Chemical Eng</fullName>
                </value>
                <value>
                    <fullName>Communications Systems</fullName>
                </value>
                <value>
                    <fullName>Digital Signal Processing</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Earth Sciences</fullName>
                </value>
                <value>
                    <fullName>Economics &amp; Comp Finance</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>General Interest</fullName>
                </value>
                <value>
                    <fullName>Image &amp; Video Processing</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Mechanical Eng</fullName>
                </value>
                <value>
                    <fullName>Neural Networks &amp; Fuzzy Logic</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Programming &amp; Computer Science</fullName>
                </value>
                <value>
                    <fullName>Stats &amp; Probability</fullName>
                </value>
                <value>
                    <fullName>System ID</fullName>
                </value>
                <value>
                    <fullName>System Modeling and Simulation</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Using MATLAB and Simulink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Book Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Book_Language__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X00_Natick_new_Project_OR_w_new_message</fullName>
        <booleanFilter>(1 AND (2 OR 3 OR 4))</booleanFilter>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Book_Language__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>E2AEmailCount__c</columns>
        <columns>Follow_Up_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>Book Project - Japan</value>
        </filters>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>00 Natick new Project OR w/new message</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01_Natick_new_Project_OR_w_new_message</fullName>
        <booleanFilter>((1 OR 5) AND 2) OR (3 AND 4)</booleanFilter>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Book_Language__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>E2AEmailCount__c</columns>
        <columns>Follow_Up_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Book_Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Book Project - Natick</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>01 Natick new Project OR  w/new message</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_Japan_new_Project_OR_w_new_message</fullName>
        <booleanFilter>((1 OR 5)AND 2) OR (3 AND 4)</booleanFilter>
        <columns>Status__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Office__c</columns>
        <columns>E2AEmailCount__c</columns>
        <columns>Follow_Up_Required__c</columns>
        <columns>Book_Language__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Book_Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Book Project - Japan</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02 Japan new Project OR  w/new message</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X04_Japan_Book_Project_w_new_message</fullName>
        <booleanFilter>(1 OR 3) and 2</booleanFilter>
        <columns>Status__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Office__c</columns>
        <columns>New_Message__c</columns>
        <columns>Book_Language__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Book_Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>04 Japan Book Project w/new message</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X05_Active_Natick_Book_Projects</fullName>
        <booleanFilter>(1 OR 3) and 2</booleanFilter>
        <columns>Status__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Contact_s_Account__c</columns>
        <columns>Siebel_Publisher__c</columns>
        <columns>Expected_Publication_Date__c</columns>
        <columns>Book_Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Developing,Copies on order - 1,Copies on order - 2,Copies on order - 3</value>
        </filters>
        <filters>
            <field>Book_Language__c</field>
            <operation>notEqual</operation>
            <value>Japanese</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Web page process,Waiting for materials</value>
        </filters>
        <label>05 Active Natick Book Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X06_Active_Japan_Book_Projects</fullName>
        <booleanFilter>(1 OR 3) and (2 OR 4)</booleanFilter>
        <columns>Status__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Siebel_Publisher__c</columns>
        <columns>Expected_Publication_Date__c</columns>
        <columns>Book_Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Developing,Copies on order - 1,Copies on order - 2,Copies on order - 3</value>
        </filters>
        <filters>
            <field>Book_Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Web page process,Waiting for materials</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Book Project - Japan</value>
        </filters>
        <label>06 Active Japan Book Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X09_Published_Book_Projects</fullName>
        <columns>Status__c</columns>
        <columns>Book_Title__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Contact_s_Account__c</columns>
        <columns>Siebel_Publisher__c</columns>
        <columns>Copyright_Year__c</columns>
        <columns>MathWorks_Webpage__c</columns>
        <columns>Book_Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published,Published – has other sw</value>
        </filters>
        <label>09 Published Book Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Book Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>